@@ -1,6 +1,7 @@
 == 0.1.11 (In Git)
 
 == New features
+* CUCUMBER_NO_JCODE environment variable disables jcode. Workaround for http://tinyurl.com/55uu3u (Aslak Hellesøy)
 * CUCUMBR LIKEZ 2 SPEEK WIF KATS. KTHXBAI (Aimee Daniells)
 * Support for dynamically pluggable formatters (#99 Joseph Wilk)
 * --verbose mode to see ruby files and feature files loaded by Cucumber (#106 Joseph Wilk)
